Fix the overflow-x

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -14,6 +14,10 @@ html {
   -o-transition: none !important;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 //Selection
 ::selection {
   background-color: var(--bs-primary);
